--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body
 {
-
+	background: #1e1f24;
 	color: #333;
 	text-align: center;
 	font-family: "Arial";
@@ -10,13 +10,20 @@ body
 }
 #RAMA_QA
 {
-	background: #33A;
+	background: #37488b;
 	box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
 	color: white;
 	font-weight: bold;
 	margin: 0;
-	padding: 0.5em;
+	padding: 0.5em 0 0.5em 2em;
+}	
+
+#RAMA #logo
+{
+	width: 20px;
+	vertical-align: middle;
 }
+
 #RAMA_QA #tagline
 {
 	padding: 0 0 0 1em;
@@ -38,5 +45,6 @@ body
 }
 #post
 {
+	background: white;
 	padding: 1em;
 }
